mess models fix

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -15,7 +15,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="{% static 'home/vc.jpg' %}" alt="IMG" id="img1">
+            <img src="{% static 'home/IMG1.jpg' %}" alt="IMG" id="img1">
             <div class="carousel-caption">
               <h3>VC1</h3>
               <p>The atmosphere in VC is lorem ipsum.</p>
