--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -32,17 +32,17 @@
         <br>
         <h3 class="text-center">Devoloper</h3>
         <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#home">Bijli</a></li>
-            <li><a data-toggle="tab" href="#menu1">Chulkani</a></li>
+            <li class="active"><a data-toggle="tab" href="#home"></a></li>
+            <li><a data-toggle="tab" href="#menu1"></a></li>
         </ul>
         <div class="tab-content">
             <div id="home" class="tab-pane fade in active">
-                <h2>Sourav Jha</h2>
-                <p>Library</p>
+                <h2></h2>
+                <p></p>
             </div>
             <div id="menu1" class="tab-pane fade">
-                <h2>Bibhas Mondal</h2>
-                <p>Mess</p>
+                <h2></h2>
+                <p></p>
             </div>
         </div>
     </div>
