--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -31,7 +31,7 @@
           </div>
 
           <div class="item">
-            <img alt="IMG" src="{% static 'home/IMG3.JPG' %}" id="img3">
+            <img alt="IMG" src="{% static 'home/IMG3.JPG' %}" style="width:100%;height:100%"id="im">
             <div class="carousel-caption">
               <h3>VC3</h3>
               <p>Even though the traffic was a mess, we had the best time playing at VC Vollyground!</p>
