--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -15,7 +15,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="{% static 'home/IMG1.jpg' %}" alt="IMG" id="img1">
+            <img src="{% static 'home/IMG1.jpg' %}" alt="IMG" id="img1v">
             <div class="carousel-caption">
               <h3>VC1</h3>
               <p>The atmosphere in VC is lorem ipsum.</p>
@@ -31,7 +31,7 @@
           </div>
 
           <div class="item">
-            <img alt="IMG" src="{% static 'home/IMG3.JPG' %}" style="width:100%;height:100%"id="im">
+            <img alt="IMG" src="{% static 'home/IMG31.jpg' %}" id="img3">
             <div class="carousel-caption">
               <h3>VC3</h3>
               <p>Even though the traffic was a mess, we had the best time playing at VC Vollyground!</p>
