--- a/account/templates/account/json.html
+++ b/account/templates/account/json.html
@@ -5,11 +5,40 @@
 {% endblock %}
 {% block content %}
 <div class="container-fluid">
-  <form action="." method="post">
-    {% csrf_token %}
-    <input type="file"  name="q">
-    <button class="btn btn-success" type="submit">Submit</button>
-  </form>
+  <div id="position1" class="col-sm-6 col-xs-12" style="margin-top:20px;margin-bottom:20px">
+      <div id="extra" class="col-sm-6 col-xs-12" style="background-color:#86ABF5;padding-top:0px;padding-bottom:20px">
+          <h4 style="margin-bottom:10px"><b>Json Dump</b></h4>
+          <p style="color:white">{% now "jS F Y" %}</p>
+          <form class="form" action="." method="post">
+              {% csrf_token %}
+              {% for field in dumpform %}
+                  {{ field.errors }}
+                  {{ field }}<br />
+              {% endfor %}
+              <input class="btn btn-success" style="height:34px;" type="submit" value="Submit"/>
+          </form>
+          {% if data %}
+            {% for element in data %}
+              <a href="data:text/json;charset=UTF-8,{{element.filecontent.read}}" download="{{element.filename}}.json">{{element.filename}}</a><br />
+            {% endfor %}
+          {% endif %}
+      </div>
+  </div>
+  <div id="position2" class="col-sm-6 col-xs-12" style="margin-top:20px;margin-bottom:20px">
+      <div id="adjust" class="col-sm-6 col-xs-12" style="background-color:#86ABF5;padding-top:0px;padding-bottom:20px">
+          <h4 style="margin-bottom:10px"><b>Json Load</b></h4>
+          <p style="color:white">{% now "jS F Y" %}</p>
+          <form class="form" action="." method="post">
+              {% csrf_token %}
+              {% for field in loadform %}
+                  {{ field.errors }}
+                  {{ field }}<br />
+              {% endfor %}
+              <input class="btn btn-success" style="height:34px;" type="submit" value="Submit"/>
+          </form>
+      </div>
+  </div>
 </div>
+<script src="{% static 'mess/extraadjustment.js' %}" type="text/javascript"></script >
 {% endblock %}
    
