--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -3,10 +3,10 @@
 {% block content %}
 {% load staticfiles %}
     <div class="container-fluid">
-        <h1>Youtube Channel</h1>        
+        <h1>Gallery</h1>        
             {% for result in results %}
 <a style="width:120px;height:120px;margin-left:10px;margin-right:10px;margin-top:10px;margin-bottom:10px;float:left" href="{% static result %}">
-		<img src="{% static result %}" style="width:100px;height:100px">	</a>            
+		<img src="{% static 'gallery/result' %}" style="width:100px;height:100px">	</a>            
             {% endfor %}
     </div>
 {% endblock %}
