--- a/mess/templates/mess/extraadjustment.html
+++ b/mess/templates/mess/extraadjustment.html
@@ -1,5 +1,5 @@
 {% extends 'home/base.html' %}
-{% block title %} Mess | VC {% endblock %}
+{% block title %} Adjustment | Mess {% endblock %}
 {% block styles %}
 {% load staticfiles %}
 {% endblock %}
