--- a/mess/templates/mess/guestmeal.html
+++ b/mess/templates/mess/guestmeal.html
@@ -1,5 +1,5 @@
 {% extends 'home/base.html' %}
-{% block title %} Mess | VC {% endblock %}
+{% block title %} Guestmeal | Mess {% endblock %}
 {% block styles %}
     {% load staticfiles %}
 {% endblock %}
