dp fix for heroku

--- a/account/templates/account/editdetails.html
+++ b/account/templates/account/editdetails.html
@@ -1,5 +1,5 @@
 {% extends 'home/base.html' %}
-{% block title %} Change password | Account {% endblock %}
+{% block title %} Edit Details | Account {% endblock %}
 {% block styles %}
     {% load staticfiles %}
     <link rel="stylesheet" href="{% static 'account/profile.css' %}">
@@ -33,5 +33,5 @@
             </div>
         </div>
     </div>
-    <script src="{% static 'account/profile.js' %}" type="text/javascript"></script >
+    <script src="{% static 'account/profile.js' %}" type="text/javascript"></script>
 {% endblock %}
