--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -37,7 +37,7 @@
 
                 <div style="float:right;font-size:20px;margin-top:10px;margin-right:-10px;margin-left:110px">
                     {% if request.user.is_authenticated %}
-                        <a data-toggle="collapse" href="#demo" ><img src="{{request.user.boarder.dp.url}}" style="width:40px;height:40px;margin-top:5px;" class="img-circle" alt="{{request.user.boarder|sf }}"></a>
+                        <a data-toggle="collapse" href="#demo" ><img src="{{request.user.boarder.dp}}" style="width:40px;height:40px;margin-top:5px;" class="img-circle" alt="{{request.user.boarder|sf }}"></a>
                     {% else %}
                         <a data-toggle="collapse" href="#demo" class="navlogin"><i style="margin-top:15px;margin-left:-35px" class="material-icons">&#xe7fe;</i><span class="tooltiptext">Sign in</span></a>
                     {% endif %}
@@ -53,7 +53,7 @@
                         {% if request.user.is_authenticated %}
                             <div class="row" style="padding-top:10px;padding-bottom:10px;padding-right:10px;padding-left:10px">
                                 <div class="user">
-                                    <a href="{% url 'account:home' %}"><img src="{{request.user.boarder.dp.url}}" style="width:60px;height:60px" class="img-circle" alt="{{request.user.boarder|sf }}"><span class="tooltiptext">Account info</span></a>
+                                    <a href="{% url 'account:home' %}"><img src="{{request.user.boarder.dp}}" style="width:60px;height:60px" class="img-circle" alt="{{request.user.boarder|sf }}"><span class="tooltiptext">Account info</span></a>
                                 </div>
                                 <div style="margin-top:-10px;float:left">
                                     <b style="font-size:15px;color:black">{{request.user.boarder}}</b><br />
