--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -4,13 +4,14 @@
         <title id="title">{% block title %}{% endblock %}</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         {% load staticfiles %}
         <link rel="shortcut icon" href="{% static 'home/favicon.ico' %}" />
         <link rel="icon" href="{% static 'home/favicon.ico' %}" type="image/x-icon" />
         <link rel="stylesheet" href="{% static 'home/bootstrap.min.css' %}">
         <link href="{% static 'home/latofont.css' %}" rel="stylesheet" type="text/css">
         <link href="{% static 'home/montserratfont.css' %}" rel="stylesheet" type="text/css">
-        <script src="{% static 'home/jquery-3.3.1.min.js' %}"></script>
+        <script src="{% static 'home/jquery.min.js' %}"></script>
         <script src="{% static 'home/bootstrap.min.js' %}"></script>
         <link href="{% static 'home/materialicons.css' %}" rel="stylesheet">
         <link href="{% static 'home/font-awesome.min.css' %}" rel="stylesheet">
