current boarder field added

--- a/chat/templates/chat/chatapp.html
+++ b/chat/templates/chat/chatapp.html
@@ -45,7 +45,7 @@
                                     <div class="macro" style="word-wrap:break-word">
                                         <small style="float:right;position:absolute;top:0px;right:5px">{{chat.name}}</small>
                                         <small style="float:right;position:absolute;bottom:0px;right:5px;padding-top:5px">{{chat.chat_datetime.time}} </small>
-                                        <img src="data:image/jpeg;base64,{{chat.dp}}" style="width:50px;height:50px;margin-top:0px;position:relative" class="img-circle" alt="vc">
+                                        <img src="{{chat.dp}}" style="width:50px;height:50px;margin-top:0px;position:relative" class="img-circle" alt="vc">
                                         <label  style="margin-top:9px;margin-bottom:9px;position:relative;width:230px;text-align:left;margin-left:5px">{{chat.message}}</label>
                                     </div>
                                 </div>
@@ -55,7 +55,7 @@
                                 <div> <span class="ms" ></span>
                                     <div class="mac" style="word-wrap:break-word">
                                         <div style="height:50px">
-                                            <img src="data:image/jpeg;base64,{{chat.dp}}" style="width:50px;height:50px;margin-top:0px;right:5px;position:absolute" class="img-circle" alt="vc">
+                                            <img src="{{chat.dp}}" style="width:50px;height:50px;margin-top:0px;right:5px;position:absolute" class="img-circle" alt="vc">
                                         </div>
                                         <small style="position:absolute; top:0px;right:55px">{{chat.name}}</small>
                                         <small  style="position:absolute;bottom:0px;right:55px">{{chat.chat_datetime.time}}</small>
