--- a/account/templates/account/home.html
+++ b/account/templates/account/home.html
@@ -14,6 +14,7 @@
                 <div class="detail col-sm-12 col-xs-12">
                     <div class="field">Name:</div>
                     <div class="value">{{ request.user.first_name }} {{ request.user.last_name }}</div>
+                    <a href="{% url 'account:editdetails' %}" class="editlink"><img src="data:image/jpeg;base64,{{request.user.boarder.dp}}" style="width:60px;height:60px;margin-top:-20px;margin-bottom:-15px" class="img-circle"><span class="tooltiptext">Change picture</span></a>
                 </div>
                 <div class="detail col-sm-12 col-xs-12">
                     <div class="field">Email:</div>
