responsive registration form

--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -26,7 +26,7 @@
                     {% for field in b_form %}
                         {% if control != 5 %}
                             {% set control as control %}
-                                <div class="col-sm-12">
+                                <div class="container-fluid row">
                                     <div class="col-sm-7">
                                         <label class="text-danger small" style="position:absolute;margin-top:-20px;margin-left:-20px">
                                             {{ field.errors }}
