--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -11,7 +11,7 @@
             <a href="{% url 'account:forgotpassword' %}"><b>Forgot Password</b></a><br />
             <a href="{% url 'account:register' %}"><b>Create account</b></a>
         </div><br />
-        <input type="submit" class="btn btn-primary" value="Login" />
+        <input type="submit" class="btn btn-primary" style="letter-spacing:2px" value="Login" />
     </div>
 </form>
 <script src="{% static 'account/login.js' %}" type="text/javascript"></script>
