dues app updated

--- a/dues/templates/dues/printscan.html
+++ b/dues/templates/dues/printscan.html
@@ -2,7 +2,7 @@
 {% block title %} Print & Scan | Dues {% endblock %} 
 {% block styles %} 
 {% load staticfiles %}
-    <link rel="stylesheet" href="{% static 'dues/printscan.css' %}">
+    <link rel="stylesheet" href="{% static 'dues/table.css' %}">
 {% endblock %}
 {% block mininav %}
     {% include 'dues/mininav.html' %}
