--- a/account/templates/account/json.html
+++ b/account/templates/account/json.html
@@ -31,7 +31,7 @@
         </ul>
         <div class="tab-content">
             <div id="home" class="tab-pane fade in active">
-                <form class="form" action="." method="post">
+                <form class="form" action="." method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in loadform %}
                         {{ field.errors }}
@@ -42,7 +42,7 @@
                 </form>
             </div>
             <div id="menu1" class="tab-pane fade">
-                <form class="form" action="." method="post">
+                <form class="form" action="." method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {% for field in loadform %}
                         {{ field.errors }}
