--- a/mess/templates/mess/list.html
+++ b/mess/templates/mess/list.html
@@ -9,59 +9,82 @@
 {% endblock %}
 {% block content %}
     <div class="container-fluid">
-        {% regroup boarder by Year_Of_Passing as batch_list %}
         <ul class="nav nav-tabs">
-            {% for batch in batch_list %}
+            {% for data in data_list %}
                 {% if forloop.counter == 1 %}
-                    <li class="active"><a data-toggle="tab" href="#{{batch.grouper}}">Batch {{batch.grouper}}</a></li>
+                    <li class="active">
+                        <a data-toggle="tab" href="#{{data.half}}">{{data.half}}</a>
+                    </li>
                 {% else %}
-                    <li><a data-toggle="tab" href="#{{batch.grouper}}">Batch {{batch.grouper}}</a></li>
+                    <li>
+                        <a data-toggle="tab" href="#{{data.half}}">{{data.half}}</a>
+                    </li>
                 {% endif %}
             {% endfor %}
-        </ul>        
+        </ul>
         <div class="tab-content">
-            {% for batch in batch_list %}
+            {% for data in data_list %}
                 {% if forloop.counter == 1 %}
-                    <div id="{{batch.grouper}}" class="tab-pane fade in active">
+                    <div id="{{data.half}}" class="tab-pane fade in active">
                 {% else %}
-                    <div id="{{batch.grouper}}" class="tab-pane fade">
-                {% endif %}
-                <table class="table table-striped" style="border:1px solid #ddd;border-top:none">
-                    <thead>
-                        <tr>
-                            <th scope="col">Name</th>
-                            <th scope="col">Status</th>
-                            <th scope="col">Eats Mutton</th>
-                            <th scope="col">Eats Chicken</th>
-                            <th scope="col">Eats Fish</th>
-                            <th scope="col">Eats Egg</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for boarder in batch.list %}
-                            <tr>
-                                <td scope="row">{{boarder.Name}}</td>
-                                <td><div class="{{boarder.status}}"></div></td>
-                                <td>{{boarder.Eats_Mutton}}</td>
-                                <td>{{boarder.Eats_Chicken}}</td>
-                                <td>{{boarder.Eats_Fish}}</td>
-                                <td>{{boarder.Eats_Egg}}</td>
-                            </tr>
+                    <div id="{{data.half}}" class="tab-pane fade">
+                {% endif %}            
+                    {% regroup data.boarder by Year_Of_Passing as batch_list %}
+                    <ul class="nav nav-tabs">
+                        {% for batch in batch_list %}
+                            {% if forloop.counter == 1 %}
+                                <li class="active"><a data-toggle="tab" href="#{{batch.grouper}}">Batch {{batch.grouper}}</a></li>
+                            {% else %}
+                                <li><a data-toggle="tab" href="#{{batch.grouper}}">Batch {{batch.grouper}}</a></li>
+                            {% endif %}
                         {% endfor %}
-                        {% for boarder in off_batch.list %}
-                            <tr>
-                                <td scope="row">{{boarder.Name}}</td>
-                                <td>OFF</td>
-                                <td>{{boarder.Eats_Mutton}}</td>
-                                <td>{{boarder.Eats_Chicken}}</td>
-                                <td>{{boarder.Eats_Fish}}</td>
-                                <td>{{boarder.Eats_Egg}}</td>
-                            </tr>
+                    </ul>        
+                    <div class="tab-content">
+                        {% for batch in batch_list %}
+                            {% if forloop.counter == 1 %}
+                                <div id="{{batch.grouper}}" class="tab-pane fade in active">
+                            {% else %}
+                                <div id="{{batch.grouper}}" class="tab-pane fade">
+                            {% endif %}
+                                <table class="table table-striped" style="border:1px solid #ddd;border-top:none">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Name</th>
+                                            <th scope="col">Status</th>
+                                            <th scope="col">Eats Mutton</th>
+                                            <th scope="col">Eats Chicken</th>
+                                            <th scope="col">Eats Fish</th>
+                                            <th scope="col">Eats Egg</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for boarder in batch.list %}
+                                            <tr>
+                                                <td scope="row">{{boarder.Name}}</td>
+                                                <td><div class="{{boarder.status}}"></div></td>
+                                                <td>{{boarder.Eats_Mutton}}</td>
+                                                <td>{{boarder.Eats_Chicken}}</td>
+                                                <td>{{boarder.Eats_Fish}}</td>
+                                                <td>{{boarder.Eats_Egg}}</td>
+                                            </tr>
+                                        {% endfor %}
+                                        {% for boarder in off_batch.list %}
+                                            <tr>
+                                                <td scope="row">{{boarder.Name}}</td>
+                                                <td>OFF</td>
+                                                <td>{{boarder.Eats_Mutton}}</td>
+                                                <td>{{boarder.Eats_Chicken}}</td>
+                                                <td>{{boarder.Eats_Fish}}</td>
+                                                <td>{{boarder.Eats_Egg}}</td>
+                                            </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
                         {% endfor %}
-                    </tbody>
-                </table>
+                    </div>
                 </div>
-            {% endfor %}
-        </div>        
+            {% endfor %}            
+        </div>
     </div>
 {% endblock %}
