--- a/mess/templates/mess/list.html
+++ b/mess/templates/mess/list.html
@@ -33,18 +33,18 @@
                     <ul class="nav nav-tabs">
                         {% for batch in batch_list %}
                             {% if forloop.counter == 1 %}
-                                <li class="active"><a data-toggle="tab" href="#{{batch.grouper}}">Batch {{batch.grouper}}</a></li>
+                                <li class="active"><a data-toggle="tab" href="#{{data.half}}_{{batch.grouper}}">Batch {{batch.grouper}}</a></li>
                             {% else %}
-                                <li><a data-toggle="tab" href="#{{batch.grouper}}">Batch {{batch.grouper}}</a></li>
+                                <li><a data-toggle="tab" href="#{{data.half}}_{{batch.grouper}}">Batch {{batch.grouper}}</a></li>
                             {% endif %}
                         {% endfor %}
                     </ul>        
                     <div class="tab-content">
                         {% for batch in batch_list %}
                             {% if forloop.counter == 1 %}
-                                <div id="{{batch.grouper}}" class="tab-pane fade in active">
+                                <div id="{{data.half}}_{{batch.grouper}}" class="tab-pane fade in active">
                             {% else %}
-                                <div id="{{batch.grouper}}" class="tab-pane fade">
+                                <div id="{{data.half}}_{{batch.grouper}}" class="tab-pane fade">
                             {% endif %}
                                 <table class="table table-striped" style="border:1px solid #ddd;border-top:none">
                                     <thead>
