design improved in mess list view

--- a/mess/static/mess/list.css
+++ b/mess/static/mess/list.css
@@ -1,10 +1,10 @@
-.ON {
+.ON,.True {
     width: 20px;
     height: 20px;
     background: green;
 }
 
-.OFF {
+.OFF,.False {
     width: 20px;
     height: 20px;
     background: red;
