--- a/mess/templates/mess/list.html
+++ b/mess/templates/mess/list.html
@@ -62,20 +62,10 @@
                                             <tr>
                                                 <td scope="row">{{boarder.Name}}</td>
                                                 <td><div class="{{boarder.status}}"></div></td>
-                                                <td>{{boarder.Eats_Mutton}}</td>
-                                                <td>{{boarder.Eats_Chicken}}</td>
-                                                <td>{{boarder.Eats_Fish}}</td>
-                                                <td>{{boarder.Eats_Egg}}</td>
-                                            </tr>
-                                        {% endfor %}
-                                        {% for boarder in off_batch.list %}
-                                            <tr>
-                                                <td scope="row">{{boarder.Name}}</td>
-                                                <td>OFF</td>
-                                                <td>{{boarder.Eats_Mutton}}</td>
-                                                <td>{{boarder.Eats_Chicken}}</td>
-                                                <td>{{boarder.Eats_Fish}}</td>
-                                                <td>{{boarder.Eats_Egg}}</td>
+                                                <td><div class="{{boarder.Eats_Mutton}}"></div></td>
+                                                <td><div class="{{boarder.Eats_Chicken}}"></div></td>
+                                                <td><div class="{{boarder.Eats_Fish}}"></div></td>
+                                                <td><div class="{{boarder.Eats_Egg}}"></div></td>
                                             </tr>
                                         {% endfor %}
                                     </tbody>
