--- a/mess/templates/mess/list.html
+++ b/mess/templates/mess/list.html
@@ -61,7 +61,7 @@
                                         {% for boarder in batch.list %}
                                             <tr>
                                                 <td scope="row">{{boarder.Name}}</td>
-                                                <td><div class="{{boarder.status}}"></div></td>
+                                                <td><div class="{{boarder.status}}">{{boarder.status}}</div></td>
                                                 <td><div class="{{boarder.Eats_Mutton}}"></div></td>
                                                 <td><div class="{{boarder.Eats_Chicken}}"></div></td>
                                                 <td><div class="{{boarder.Eats_Fish}}"></div></td>
