--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -22,99 +22,95 @@
     <body>
         {% if not request|isappview %}
             <nav class="navbar navbar-default navbar-fixed-top">
+                <div class="container-fluid">
 
-              <div class="container-fluid">
-
-                <div style="float:right;font-size:20px;margin-top:10px;margin-right:-10px;margin-left:110px">
-                    {% if request.user.is_authenticated %}
-                        <a data-toggle="collapse" href="#navLogin" ><img src="data:image/jpeg;base64,{{request.user.boarder.dp}}" style="width:40px;height:40px;margin-top:5px;" class="img-circle" alt="{{request.user.boarder|sf }}"></a>
-                    {% else %}
-                        <a data-toggle="collapse" href="#navLogin" class="navlogin"><i style="margin-top:15px;margin-left:-35px" class="material-icons">&#xe7fe;</i><span class="tooltiptext">Sign in</span></a>
-                    {% endif %}
-                </div>
-
-                <div id="navLogin" class="collapse" style="position:absolute;background-color:#e0e0de;right:0;top:63px;border-radius:5px;z-index:1;">
-
-                    <div>
-                        <span class="rightuppertriangle"></span><span class="leftuppertriangle"></span>
-                    </div>
-
-                    <div class="container-fluid">
+                    <div style="float:right;font-size:20px;margin-top:10px;margin-right:-10px;margin-left:110px">
                         {% if request.user.is_authenticated %}
-                            <div class="row" style="padding-top:10px;padding-bottom:10px;padding-right:10px;padding-left:10px">
-                                <div class="user">
-                                    <a href="{% url 'account:home' %}"><img src="data:image/jpeg;base64,{{request.user.boarder.dp}}" style="width:60px;height:60px" class="img-circle" alt="{{request.user.boarder|sf }}"><span class="tooltiptext">Account info</span></a>
-                                </div>
-                                <div style="margin-top:-10px;float:left">
-                                    <b style="font-size:15px;color:black">{{request.user.boarder}}</b><br />
-                                    <label style="font-size:11px;letter-spacing:0px">{{request.user.email}}</label>
-                                </div><br />
-                                <button id="logout" class="btn btn-primary" style="float:right;letter-spacing:2px">Sign out</button><br />
-                            </div>
+                            <a data-toggle="collapse" href="#navLogin" ><img src="data:image/jpeg;base64,{{request.user.boarder.dp}}" style="width:40px;height:40px;margin-top:5px;" class="img-circle" alt="{{request.user.boarder|sf }}"></a>
                         {% else %}
-                            {% include 'account/login.html' %}
+                            <a data-toggle="collapse" href="#navLogin" class="navlogin"><i style="margin-top:15px;margin-left:-35px" class="material-icons">&#xe7fe;</i><span class="tooltiptext">Sign in</span></a>
                         {% endif %}
                     </div>
+
+                    <div id="navLogin" class="collapse" style="position:absolute;background-color:#e0e0de;right:0;top:63px;border-radius:5px;z-index:1;">
+
+                        <div>
+                            <span class="rightuppertriangle"></span><span class="leftuppertriangle"></span>
+                        </div>
+
+                        <div class="container-fluid">
+                            {% if request.user.is_authenticated %}
+                                <div class="row" style="padding-top:10px;padding-bottom:10px;padding-right:10px;padding-left:10px">
+                                    <div class="user">
+                                        <a href="{% url 'account:home' %}"><img src="data:image/jpeg;base64,{{request.user.boarder.dp}}" style="width:60px;height:60px" class="img-circle" alt="{{request.user.boarder|sf }}"><span class="tooltiptext">Account info</span></a>
+                                    </div>
+                                    <div style="margin-top:-10px;float:left">
+                                        <b style="font-size:15px;color:black">{{request.user.boarder}}</b><br />
+                                        <label style="font-size:11px;letter-spacing:0px">{{request.user.email}}</label>
+                                    </div><br />
+                                    <button id="logout" class="btn btn-primary" style="float:right;letter-spacing:2px">Sign out</button><br />
+                                </div>
+                            {% else %}
+                                {% include 'account/login.html' %}
+                            {% endif %}
+                        </div>
+                    </div>
+
+                    <div class="navbar-header">
+                        <button id="navbtn" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="float:left">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="text-center" href="{% url 'home:home' %}"><img src="{% static 'home/vc_logo.png' %}" alt="VC" style="width:60px;height:60px;margin-top:5px;margin-bottom:5px"></a><span style="color:white;font-size:18px;position:absolute;font-family:bleeding_cowboys;top:2px">Vidyasagar<br>Chhatrabas</span>
+                    </div>
+
+                    <div class="collapse navbar-collapse" id="myNavbar">
+                        <ul class="nav navbar-nav navbar-right">
+                            {% if 'home' in request.resolver_match.app_name %}
+                                <li  class="active"><a>HOME</a></li>
+                            {% else %}
+                                <li><a href="{% url 'home:home' %}">HOME</a></li>
+                            {% endif %}
+                
+                            {% if 'contact' in request.resolver_match.app_name %}
+                                <li  class="active"><a>CONTACT</a></li>
+                            {% else %}
+                                <li><a href="{% url 'contact:home' %}">CONTACT</a></li>
+                            {% endif %}
+
+                            {% if 'gallery' in request.resolver_match.app_name %}
+                                <li  class="active"><a>GALLERY</a></li>
+                            {% else %}
+                                <li><a href="{% url 'gallery:home' 'f:/' %}">GALLERY</a></li>
+                            {% endif %}
+
+                            {% if 'library' in request.resolver_match.app_name %}
+                                <li class="active"><a href="{% url 'library:home' %}">LIBRARY</a></li>
+                            {% else %}
+                                <li><a href="{% url 'library:home' %}">LIBRARY</a></li>
+                            {% endif %}
+
+                            {% if 'mess' in request.resolver_match.app_name %}
+                                <li class="active"><a href="{% url 'mess:home' %}">MESS</a></li>
+                            {% else %}
+                                <li><a href="{% url 'mess:home' %}">MESS</a></li>
+                            {% endif %}
+                            {% if request.user.is_authenticated %}
+                                {% if 'committee' in request.resolver_match.app_name %}
+                                    <li class="active"><a href="{% url 'committee:home' %}">COMMITTEE</a></li>
+                                {% else %}
+                                    <li><a href="{% url 'committee:home' %}">COMMITTEE</a></li>
+                                {% endif %}
+                                {% if 'dues' in request.resolver_match.app_name %}
+                                    <li class="active"><a href="{% url 'dues:home' %}">DUES</a></li>
+                                {% else %}
+                                    <li><a href="{% url 'dues:home' %}">DUES</a></li>
+                                {% endif %}
+                            {% endif %}
+                        </ul>
+                    </div>
                 </div>
-
-                <div class="navbar-header">
-                    <button id="navbtn" type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar" style="float:left">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="text-center" href="{% url 'home:home' %}"><img src="{% static 'home/vc_logo.png' %}" alt="VC" style="width:60px;height:60px;margin-top:5px;margin-bottom:5px"></a><span style="color:white;font-size:18px;position:absolute;font-family:bleeding_cowboys;top:2px">Vidyasagar<br>Chhatrabas</span>
-                </div>
-
-                <div class="collapse navbar-collapse" id="myNavbar">
-                  <ul class="nav navbar-nav navbar-right">
-
-                    {% if 'home' in request.resolver_match.app_name %}
-                        <li  class="active"><a>HOME</a></li>
-                    {% else %}
-                        <li><a href="{% url 'home:home' %}">HOME</a></li>
-                    {% endif %}
-          
-                    {% if 'contact' in request.resolver_match.app_name %}
-                        <li  class="active"><a>CONTACT</a></li>
-                    {% else %}
-                        <li><a href="{% url 'contact:home' %}">CONTACT</a></li>
-                    {% endif %}
-
-                    {% if 'gallery' in request.resolver_match.app_name %}
-                        <li  class="active"><a>GALLERY</a></li>
-                    {% else %}
-                        <li><a href="{% url 'gallery:home' %}">GALLERY</a></li>
-                    {% endif %}
-
-                    {% if 'library' in request.resolver_match.app_name %}
-                        <li class="active"><a href="{% url 'library:home' %}">LIBRARY</a></li>
-                    {% else %}
-                        <li><a href="{% url 'library:home' %}">LIBRARY</a></li>
-                    {% endif %}
-
-                    {% if 'mess' in request.resolver_match.app_name %}
-                        <li class="active"><a href="{% url 'mess:home' %}">MESS</a></li>
-                    {% else %}
-                        <li><a href="{% url 'mess:home' %}">MESS</a></li>
-                    {% endif %}
-                    {% if request.user.is_authenticated %}
-                        {% if 'committee' in request.resolver_match.app_name %}
-                            <li class="active"><a href="{% url 'committee:home' %}">COMMITTEE</a></li>
-                        {% else %}
-                            <li><a href="{% url 'committee:home' %}">COMMITTEE</a></li>
-                        {% endif %}
-                        {% if 'dues' in request.resolver_match.app_name %}
-                            <li class="active"><a href="{% url 'dues:home' %}">DUES</a></li>
-                        {% else %}
-                            <li><a href="{% url 'dues:home' %}">DUES</a></li>
-                        {% endif %}
-                    {% endif %}
-                  </ul>
-                </div>
-
-              </div>
-
             </nav>
 
             <div id="myBody" style="position:absolute;left:0;right:0;top:70px;bottom:64px;overflow-y:auto;overflow-x:hidden">
