streaming added at gallery

--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -1,17 +1,38 @@
 {% extends 'home/base.html' %}
 {% block title %} Index of {{ directory }} {% endblock %}
-{% block content %}
+{% block styles %}
     {% load staticfiles %}
-    {% load path_tags%}
+    <link rel="stylesheet" href="{% static 'gallery/gallery.css' %}">
+{% endblock %}
+{% block content %}
     <div class="container-fluid">
-        <h1>Index of {{ directory }}</h1>
-        <ul>
+        <div>
+            <h1><b>Index of {{ directory }}</b></h1>
             {% if directory != "/" %}
-                <li><a href="../">../</a></li>
+                <div class="col-sm-12 row" style="padding-bottom:20px">
+                        <b><a class="up" style="padding-left:20px" href="../">[parent directory]</a></b>
+                </div>
             {% endif %}
-            {% for f in file_list %}
-                <li><a href="{{ f|urlencode }}">{{ f }}</a></li>
-            {% endfor %}
-        </ul>
+        </div>
+        <table style="width:100%">
+            <thead style="background-color:rgba(0,0,0,0.5);color: black">
+                <tr>
+                    <th style="width:70%"><b style="font-size:20px">Name</b></th>
+                    <th style="width:10%"><b style="font-size:20px">Size</b></th>
+                    <th style="width:20%"><b style="font-size:20px">Last Modified</b></th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for f in file_list %}
+                    <tr>
+                        <th style="width:70%">
+                            <a class="{{f.type}}" style="padding-left:20px" href="{{f.name}}/">{{f.name}}</a>
+                        </th>
+                        <th style="width:10%">{{f.size}}</th>
+                        <th style="width:20%">{{f.lastModified}}</th>
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 {% endblock %}
